--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
             <a-assets>
-                <a-asset-item id='tree-obj' src='models/little-fox/model.obj'></a-asset-item>
-                <a-asset-item id='tree-mtl' src='models/little-fox/material.mtl'></a-asset-item>
+                <a-asset-item id='tree-obj' src='little-fox/model.obj'></a-asset-item>
+                <a-asset-item id='tree-mtl' src='little-fox/material.mtl'></a-asset-item>
             </a-assets>		>
 
         <a-marker type='barcode' value='7'>
