--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype HTML>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
@@ -10,42 +11,23 @@
         <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
         <a-scene embedded vr-mode-ui="enabled: false" arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">
 
-            <a-assets>
-                <a-asset-item id='tree-obj' src='models/model.obj'></a-asset-item>
-                <a-asset-item id='tree-mtl' src='models/material.mtl'></a-asset-item>
-            </a-assets>		>
+        <a-assets>
+            <a-asset-item id="animated-asset" src="models/man.gltf"></a-asset-item>
+        </a-assets>
 
         <a-marker type='barcode' value='7'>
             <a-box position='0 0.5 0' color="yellow"></a-box>
         </a-marker>
 
-        <a-anchor hit-testing-enabled='true'>
-			
-			<a-entity id="logo" rotation="0 45 0" scale='0.8 0.8 0.8'>
-				<!-- firefox model -->
-				<a-entity obj-model='obj: #tree-obj; mtl: #tree-mtl' position='0 0.8 0' rotation='0 90 0' shadow='receive: true'></a-entity>
-				
-				<!-- add shadow only ground -->
-				<a-entity shadowonly-plane='width: 3; height: 3; opacity: 0.7'></a-entity>
+        <a-marker id="animated-marker" type='barcode' value='6'>
+            <a-entity
+                animation-mixer
+                gltf-model="#animated-asset"
+                scale="2 2 2">
+            </a-entity>
+        </a-marker>
 
-				<!-- firefox 55 is out -->
-				<a-entity position='-0.4 1.5 0' rotation='90 0 0' scale='0.6 0.6 0.6'>
-					<a-animation attribute='rotation' from='15 0 30' to='-15 0 30' direction='alternate' dur='500'
-						repeat='indefinite' easing='ease-in-out-cubic'></a-animation>
-					<a-text position='-1 0 0' side='double' value='Firefox 55 is out!!' color='orange' shadow='receive: true'></a-text>
-				</a-entity>
-				<!-- webvr included -->
-				<a-entity position='0.6 1.3 0' rotation='90 0 0' scale='0.6 0.6 0.6'>
-					<a-animation attribute='rotation' from='15 0 -30' to='-15 0 -30' direction='alternate' dur='500'
-						repeat='indefinite' easing='ease-in-out-cubic'></a-animation>
-					<a-text position='-1 0 0' side='double' value='WebVR included!!' color='orange' shadow='receive: true'></a-text>
-				</a-entity>
-			<a-entity>
-
-		</a-anchor>
-
-		<!-- Define a static camera -->
-		<a-camera-static/>
+        <a-entity camera></a-entity>
         </a-scene>
     </body>
 </html>
