--- a/skull.html
+++ b/skull.html
@@ -23,7 +23,7 @@
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
-                scale="20 20 20">
+                scale="20 20 20" rotation="0 90 0">
             </a-entity>
         </a-marker>
 
