--- a/earth.html
+++ b/earth.html
@@ -23,7 +23,7 @@
             <a-entity
                 animation-mixer
                 gltf-model="#animated-asset"
-                scale="2 2 2" rotation="0 0 0">
+                scale="1 1 1">
             </a-entity>
         </a-marker>
 
